完成了实验2.1

--- a/source/_posts/2019-04-04-环境和mathjax导入测试.md
+++ b/source/_posts/2019-04-04-环境和mathjax导入测试.md
@@ -3,6 +3,7 @@ title: 环境和mathjax导入测试
 urlname: environment-and-mathjax-import
 date: 2019-04-04 15:02:14
 tags:
+mathjax: true
 ---
 
 ## 我的博客现状
@@ -164,7 +165,80 @@ import:
 * hexo-renderer-markdown-it-plus这个渲染器有问题
   * 很有可能。也许我应该换一个渲染器
 * 作者的有些CSS设置和MathJax冲突了
-  * Issue里好像有过这样的说法。
+  * 网上好像有过这样的说法。
+* 博客的`_config.yml`中设置的math engine和renderer冲突了
+  * 令人深思的想法
 
-## 实验：尝试复现这一环境
+## 实验材料
 
+相关文段如下（备用）：
+
+我们重新考虑一下半径的问题。以半径$r$作为随机变量，则随机点落在$r$范围内的概率分布为
+
+$$\text{CDF}(r) = \frac{r^2}{R^2}$$
+
+$$\text{PDF}(r) = \frac{d}{dr} \text{CDF}(r) = \frac{2r}{R^2}$$
+
+以`[0, 1]`均匀分布对$\text{CDF}(r)$进行随机，则有$r = R \sqrt{\text{rand}()}$。
+
+## 实验1：hexo-renderer-marked + mathjax（默认配置）
+
+### 实验1.1：验证默认状态下没有问题
+
+此时同样的公式显示没有任何问题：
+
+![看到正确的公式渲染，真欣慰……](test1.png)
+
+结论：作者写的应该没什么问题。
+
+### 实验1.2：验证设置math engine的影响
+
+// TODO
+
+---
+
+package.json：
+
+```json
+{
+  "name": "hexo-site",
+  "version": "0.0.0",
+  "private": true,
+  "hexo": {
+    "version": "3.8.0"
+  },
+  "dependencies": {
+    "hexo": "^3.3.0",
+    "hexo-autoprefixer": "^1.0.0",
+    "hexo-generator-archive": "^0.1.2",
+    "hexo-generator-category": "^0.1.2",
+    "hexo-generator-feed": "^1.2.2",
+    "hexo-generator-index": "^0.1.2",
+    "hexo-generator-json-content": "^3.0.1",
+    "hexo-generator-search": "^2.4.0",
+    "hexo-generator-seo-friendly-sitemap": "0.0.22",
+    "hexo-generator-tag": "^0.1.1",
+    "hexo-helper-qrcode": "^1.0.2",
+    "hexo-lazyload-image": "^1.0.3",
+    "hexo-related-popular-posts": "^3.0.3",
+    "hexo-renderer-ejs": "^0.3.0",
+    "hexo-renderer-less": "^0.2.0",
+    "hexo-renderer-marked": "^0.3.0",
+    "hexo-renderer-stylus": "^0.3.0",
+    "hexo-deployer-git": "^0.3.1",
+    "hexo-server": "^0.2.0"
+  }
+}
+```
+
+`_config.yml`中没有关于mathjax的特殊配置。
+
+## 实验2：hexo-renderer-markdown-it-plus
+
+### 实验2.1：hexo-renderer-markdown-it-plus + mathjax
+
+卸载hexo-renderer-marked，安装hexo-renderer-markdown-it-plus，在配置文件中disable KaTeX（但不加入关于math engine的配置）。其余配置不变。
+
+![渲染挂了，而且挂得和之前一样](test2.png)
+
+结论：hexo-renderer-markdown-it-plus会直接导致mathjax渲染出问题。
