加入katex之后的markdown-it-plus

--- a/source/_posts/2019-04-04-环境和mathjax导入测试.md
+++ b/source/_posts/2019-04-04-环境和mathjax导入测试.md
@@ -183,17 +183,11 @@ $$\text{PDF}(r) = \frac{d}{dr} \text{CDF}(r) = \frac{2r}{R^2}$$
 
 ## 实验1：hexo-renderer-marked + mathjax（默认配置）
 
-### 实验1.1：验证默认状态下没有问题
-
 此时同样的公式显示没有任何问题：
 
 ![看到正确的公式渲染，真欣慰……](test1.png)
 
 结论：作者写的应该没什么问题。
-
-### 实验1.2：验证设置math engine的影响
-
-// TODO
 
 ---
 
@@ -235,10 +229,84 @@ package.json：
 
 ## 实验2：hexo-renderer-markdown-it-plus
 
+卸载hexo-renderer-marked，安装hexo-renderer-markdown-it-plus。
+
 ### 实验2.1：hexo-renderer-markdown-it-plus + mathjax
 
-卸载hexo-renderer-marked，安装hexo-renderer-markdown-it-plus，在配置文件中disable KaTeX（但不加入关于math engine的配置）。其余配置不变。
+在配置文件中disable KaTeX（但不加入关于math engine的配置），如上文。其余配置不变。
 
 ![渲染挂了，而且挂得和之前一样](test2.png)
 
+发现渲染挂了，而且挂得和之前一样。
+
 结论：hexo-renderer-markdown-it-plus会直接导致mathjax渲染出问题。
+
+### 实验2.2：hexo-renderer-markdown-it-plus + katex
+
+在配置文件中enable KaTeX（但不加入关于math engine的配置），并引入最新版KaTeX CSS，如上文。其余配置不变。
+
+![出现了一点错位](markdown-it-plus-test2.png)
+
+发现渲染出现了一点错位，不过比我的博客中出现的状况要好一点。
+
+是否配置math engine对结果没有影响。
+
+结论：hexo-renderer-markdown-it-plus的katex渲染可能也有问题。
+
+---
+
+package.json：
+
+```json
+{
+  "name": "hexo-site",
+  "version": "0.0.0",
+  "private": true,
+  "hexo": {
+    "version": "3.8.0"
+  },
+  "dependencies": {
+    "hexo": "^3.3.0",
+    "hexo-autoprefixer": "^1.0.0",
+    "hexo-deployer-git": "^0.3.1",
+    "hexo-generator-archive": "^0.1.2",
+    "hexo-generator-category": "^0.1.2",
+    "hexo-generator-feed": "^1.2.2",
+    "hexo-generator-index": "^0.1.2",
+    "hexo-generator-json-content": "^3.0.1",
+    "hexo-generator-search": "^2.4.0",
+    "hexo-generator-seo-friendly-sitemap": "0.0.22",
+    "hexo-generator-tag": "^0.1.1",
+    "hexo-helper-qrcode": "^1.0.2",
+    "hexo-lazyload-image": "^1.0.3",
+    "hexo-related-popular-posts": "^3.0.3",
+    "hexo-renderer-ejs": "^0.3.0",
+    "hexo-renderer-less": "^0.2.0",
+    "hexo-renderer-markdown-it-plus": "^1.0.4",
+    "hexo-renderer-stylus": "^0.3.0",
+    "hexo-server": "^0.2.0"
+  }
+}
+```
+
+`_config.yml`：
+
+```yaml
+```yml
+import:
+  link:
+    - "<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.10.0/katex.min.css'>"
+
+markdown:
+  render:
+    html: true
+    breaks: true
+    linkify: true
+  plugins:
+    - plugin:
+      name: markdown-it-katex
+      enable: true/false
+    - plugin:
+      name: markdown-it-mark
+      enable: false
+```
