markdown-it + mathjax

--- a/source/_posts/2019-04-04-环境和mathjax导入测试.md
+++ b/source/_posts/2019-04-04-环境和mathjax导入测试.md
@@ -249,6 +249,8 @@ package.json：
 
 发现渲染出现了一点错位，不过比我的博客中出现的状况要好一点。
 
+而且我发现此主题中，MathJaX渲染的公式会带个灰色的底，KaTex渲染的则不会。
+
 是否配置math engine对结果没有影响。
 
 结论：hexo-renderer-markdown-it-plus的katex渲染可能也有问题。
@@ -309,4 +311,69 @@ markdown:
     - plugin:
       name: markdown-it-mark
       enable: false
+```
+
+## 实验3：hexo-renderer-markdown-it
+
+卸载hexo-renderer-marked，安装[hexo-renderer-markdown-it](https://github.com/hexojs/hexo-renderer-markdown-it)。
+
+之前我用的就是这个renderer，因为它自带footnote功能。（但是它似乎无法生成TOC位置anchor）它并没有自带KaTeX。不过我也没有特意测试过它的公式显示效果。
+
+配置mathjax为math engine。
+
+![公式显示正常](markdown-it-test1.png)
+
+发现公式显示是正常的。
+
+---
+
+package.json：
+
+```json
+{
+  "name": "hexo-site",
+  "version": "0.0.0",
+  "private": true,
+  "hexo": {
+    "version": "3.8.0"
+  },
+  "dependencies": {
+    "hexo": "^3.3.0",
+    "hexo-autoprefixer": "^1.0.0",
+    "hexo-deployer-git": "^0.3.1",
+    "hexo-generator-archive": "^0.1.2",
+    "hexo-generator-category": "^0.1.2",
+    "hexo-generator-feed": "^1.2.2",
+    "hexo-generator-index": "^0.1.2",
+    "hexo-generator-json-content": "^3.0.1",
+    "hexo-generator-search": "^2.4.0",
+    "hexo-generator-seo-friendly-sitemap": "0.0.22",
+    "hexo-generator-tag": "^0.1.1",
+    "hexo-helper-qrcode": "^1.0.2",
+    "hexo-lazyload-image": "^1.0.3",
+    "hexo-related-popular-posts": "^3.0.3",
+    "hexo-renderer-ejs": "^0.3.0",
+    "hexo-renderer-less": "^0.2.0",
+    "hexo-renderer-markdown-it": "^3.4.1",
+    "hexo-renderer-stylus": "^0.3.0",
+    "hexo-server": "^0.2.0"
+  }
+}
+```
+
+`_config.yml`：
+
+```yaml
+math:
+  engine: 'mathjax'
+
+# Markdown-it config
+## Docs: https://github.com/celsomiranda/hexo-renderer-markdown-it/wiki
+markdown:
+  render:
+    html: true
+    breaks: true
+    linkify: true
+  plugins:
+    - markdown-it-footnote
 ```
