--- a/source/_posts/2019-04-04-环境和mathjax导入测试.md
+++ b/source/_posts/2019-04-04-环境和mathjax导入测试.md
@@ -155,19 +155,20 @@ import:
 
 几种猜测：
 
-* MathJax版本为2.7.1，太旧了
+* MathJax版本为2.7.1，太旧了（×）
   * 也不是没有这种可能。
-* 本地nodejs和npm的版本太旧了
+* 本地nodejs和npm的版本太旧了（×）
   * 但是远程渲染也有问题。
-* hexo-renderer-markdown-it-plus默认包含KaTeX，和MathJax不兼容
+* hexo-renderer-markdown-it-plus默认包含KaTeX，和MathJax不兼容（？）
   * 这也许可以解释为什么渲染出来都是`katex-block`
   * 不过KaTeX自己居然也渲染不好……
-* hexo-renderer-markdown-it-plus这个渲染器有问题
+* hexo-renderer-markdown-it-plus这个渲染器有问题（√）
   * 很有可能。也许我应该换一个渲染器
-* 作者的有些CSS设置和MathJax冲突了
+* 作者的有些CSS设置和MathJax冲突了（×）
   * 网上好像有过这样的说法。
-* 博客的`_config.yml`中设置的math engine和renderer冲突了
+* 博客的`_config.yml`中设置的math engine和renderer冲突了（×）
   * 令人深思的想法
+* 博客安装的包之间有冲突
 
 ## 实验材料
 
@@ -229,7 +230,7 @@ package.json：
 
 ## 实验2：hexo-renderer-markdown-it-plus
 
-卸载hexo-renderer-marked，安装hexo-renderer-markdown-it-plus。
+卸载hexo-renderer-marked，安装[hexo-renderer-markdown-it-plus](https://github.com/CHENXCHEN/hexo-renderer-markdown-it-plus)。
 
 ### 实验2.1：hexo-renderer-markdown-it-plus + mathjax
 
@@ -317,13 +318,17 @@ markdown:
 
 卸载hexo-renderer-marked，安装[hexo-renderer-markdown-it](https://github.com/hexojs/hexo-renderer-markdown-it)。
 
-之前我用的就是这个renderer，因为它自带footnote功能。（但是它似乎无法生成TOC位置anchor）它并没有自带KaTeX。不过我也没有特意测试过它的公式显示效果。
+之前我用的就是这个renderer，因为它自带footnote功能。（但是它似乎无法生成TOC位置anchor，所以文章目录的链接点不动）它并没有自带KaTeX。不过我也没有特意测试过它的公式显示效果。
 
-配置mathjax为math engine。
+配置mathjax为math engine。（虽然写katex也是一样的）
 
 ![公式显示正常](markdown-it-test1.png)
 
 发现公式显示是正常的。
+
+在这个renderer上自己加katex实在比较麻烦，我懒得试了。
+
+结论：hexo-renderer-markdown-it-plus加katex加出锅来了。
 
 ---
 
@@ -365,7 +370,7 @@ package.json：
 
 ```yaml
 math:
-  engine: 'mathjax'
+  engine: 'mathjax'/'katex'
 
 # Markdown-it config
 ## Docs: https://github.com/celsomiranda/hexo-renderer-markdown-it/wiki
