写了一点新的东西

--- a/source/_posts/2019-04-04-环境和mathjax导入测试.md
+++ b/source/_posts/2019-04-04-环境和mathjax导入测试.md
@@ -58,7 +58,7 @@ Travis Server环境如下：
 * node.js: v11.13.0
 * npm: 6.7.0
 
-上面的重点可能是我用hexo-renderer-markdown-it-plus渲染markdown（按照[在material-x上使用KaTeX](https://www.micdz.cn/article/katex-on-material-x/)，并且装了hexo-math。
+上面的重点可能是我用hexo-renderer-markdown-it-plus渲染markdown（按照[在material-x上使用KaTeX](https://www.micdz.cn/article/katex-on-material-x/)一文中提到的方法，并且装了hexo-math）。
 
 ### 纯用mathjax
 
@@ -168,7 +168,7 @@ import:
   * 网上好像有过这样的说法。
 * 博客的`_config.yml`中设置的math engine和renderer冲突了（×）
   * 令人深思的想法
-* 博客安装的包之间有冲突
+* 博客安装的包之间有冲突（？）
 
 ## 实验材料
 
@@ -382,3 +382,13 @@ markdown:
   plugins:
     - markdown-it-footnote
 ```
+
+## 一些测不动了的东西
+
+我猜即使安装了hexo-math也不能就让hexo-renderer-markdown-it用katex进行渲染，所以就懒得试了。
+
+不知道hexo-renderer-pandoc怎么样。
+
+我大胆猜测各npm插件之间没有冲突。
+
+……
