修正了在自己博客上测试的结果

--- a/source/_posts/2019-04-04-环境和mathjax导入测试.md
+++ b/source/_posts/2019-04-04-环境和mathjax导入测试.md
@@ -383,6 +383,18 @@ markdown:
     - markdown-it-footnote
 ```
 
+## 实验4：hexo-renderer-markdown-it + 我自己的博客
+
+我居然忘了当初hexo-renderer-markdown-it在我自己博客上公式出了啥问题了。于是我换成hexo-renderer-markdown-it，结果连编译都编译不了，hexo-generator-feed插件出问题。在网上四处查了一圈，据说是npm和nodejs版本太低了（确实低）。然后我就升级了npm，结果还是不行，于是我就干脆把这插件先给删了。
+
+最后我发现我忘了安装renderer了，所以什么都没渲染出来，de了半天bug，发现忘了改config了。
+
+---
+
+最后我发现我自己用回hexo-renderer-markdown-it之后，公式一点毛病都没有了，好得很，除了TOC点不动以外没什么大毛病。我很困惑，不过就先这样吧。
+
+（hexo-renderer-markdown-it和hexo-renderer-markdown-it-plus能不能中和一下？？？）
+
 ## 一些测不动了的东西
 
 我猜即使安装了hexo-math也不能就让hexo-renderer-markdown-it用katex进行渲染，所以就懒得试了。
