添加了新测试

--- a/source/_posts/2019-04-04-环境和mathjax导入测试.md
+++ b/source/_posts/2019-04-04-环境和mathjax导入测试.md
@@ -256,6 +256,8 @@ package.json：
 
 结论：hexo-renderer-markdown-it-plus的katex渲染可能也有问题。
 
+注：我也测试了npm和node升级之后的生成状况，发现状态不变，还是有bug。
+
 ---
 
 package.json：
